--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>spring-ai-v1</name>
-    <description>Spring AI , getting started example, using AI</description>
+    <description>Using AI Build Future Apps</description>
     <url/>
     <licenses>
         <license/>
@@ -23,6 +23,7 @@
     </developers>
     <modules>
         <module>chat-ai</module>
+        <module>user</module>
     </modules>
     <scm>
         <connection/>
